# sctd

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs
src/platform/: linux.rs  macos.rs
