[package]
name = "sctd"
version = "0.3.0"
authors = ["Amir Saeid <amir@glgdgt.com>"]
edition = "2018"
license = "CC0-1.0"

[dependencies]
chrono = "0.4"
spa = "0.3"
clap = "3.2"
log = "0.4"

[dependencies.env_logger]
version = "0.9"
default-features = false
features = ["humantime"]

[target.'cfg(target_os = "linux")'.dependencies.x11]
version = "2.20"
features = ["xlib", "xrandr"]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
