[package]
name = "sctd"
version = "0.4.0"
authors = ["Amir Saeid <amir@glgdgt.com>"]
edition = "2018"
license = "CC0-1.0"

[dependencies]
chrono = "0.4"
spa = "0.5"
clap = "4.5"
log = "0.4"

[dependencies.env_logger]
version = "0.11"
default-features = false
features = ["humantime"]

[target.'cfg(target_os = "linux")'.dependencies.x11]
version = "2.21"
features = ["xlib", "xrandr"]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
